; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_sshkey.c_sshkey_ssh_name_from_type_nid.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_sshkey.c_sshkey_ssh_name_from_type_nid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.keytype = type { i32, i32, i8* }

@keytypes = common dso_local global %struct.keytype* null, align 8
@.str = private unnamed_addr constant [12 x i8] c"ssh-unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32)* @sshkey_ssh_name_from_type_nid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @sshkey_ssh_name_from_type_nid(i32 %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.keytype*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load %struct.keytype*, %struct.keytype** @keytypes, align 8
  store %struct.keytype* %7, %struct.keytype** %6, align 8
  br label %8

8:                                                ; preds = %35, %2
  %9 = load %struct.keytype*, %struct.keytype** %6, align 8
  %10 = getelementptr inbounds %struct.keytype, %struct.keytype* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp ne i32 %11, -1
  br i1 %12, label %13, label %38

13:                                               ; preds = %8
  %14 = load %struct.keytype*, %struct.keytype** %6, align 8
  %15 = getelementptr inbounds %struct.keytype, %struct.keytype* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load i32, i32* %4, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %34

19:                                               ; preds = %13
  %20 = load %struct.keytype*, %struct.keytype** %6, align 8
  %21 = getelementptr inbounds %struct.keytype, %struct.keytype* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %30, label %24

24:                                               ; preds = %19
  %25 = load %struct.keytype*, %struct.keytype** %6, align 8
  %26 = getelementptr inbounds %struct.keytype, %struct.keytype* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %5, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %34

30:                                               ; preds = %24, %19
  %31 = load %struct.keytype*, %struct.keytype** %6, align 8
  %32 = getelementptr inbounds %struct.keytype, %struct.keytype* %31, i32 0, i32 2
  %33 = load i8*, i8** %32, align 8
  store i8* %33, i8** %3, align 8
  br label %39

34:                                               ; preds = %24, %13
  br label %35

35:                                               ; preds = %34
  %36 = load %struct.keytype*, %struct.keytype** %6, align 8
  %37 = getelementptr inbounds %struct.keytype, %struct.keytype* %36, i32 1
  store %struct.keytype* %37, %struct.keytype** %6, align 8
  br label %8

38:                                               ; preds = %8
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %39

39:                                               ; preds = %38, %30
  %40 = load i8*, i8** %3, align 8
  ret i8* %40
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
